# untitled

./: .env  Cargo.toml
front/: index.html  login.html  package-lock.json  package.json
front/src/: App.vue  router.js
front/src/components/: CreateAccount.vue  HelloWorld.vue
migrations/: 20250111193646_create_users_table.sql
src/: login.rs  main.rs  signup.rs
